# AscEmu_TBC

./: .travis.yml  0001-CORE-C-Custom-Scripts-rewritten-fixxed-Custom-Telepo.patch  0001-Fixed-custom-script-Hunter-Measstmaster-SkillNPC-Tel.patch  CMakeLists.txt  README.md  THANKS.md  issue_template.md  travis.yml
src/logonserver/: AccountCache.cpp  AccountCache.h  AuthSocket.cpp  AuthSocket.h  AuthStructs.h  AutoPatcher.cpp  AutoPatcher.h  CMakeLists.txt  LogonCommServer.cpp  LogonCommServer.h  LogonConf.h  LogonConsole.cpp  LogonConsole.h  LogonOpcodes.h  LogonServer.cpp  LogonServer.hpp  LogonStdAfx.cpp  LogonStdAfx.h  Main.cpp  Main.h  PeriodicFunctionCall_Thread.h
src/logonserver/Opcodes/: LogonRealmOpcodes.hpp
src/scripts/: .gitignore  CMakeLists.txt
src/scripts/Base/: Base.cpp  Base.h  ai.h
src/scripts/CustomScripts/: Aldor-Skyr-guards.cpp  AldorSkyGuards.cpp  CMakeLists.txt  EDteleporter.cpp  GM_Announce_System.cpp  GM_Online.cpp  Gmannouncesystem.cpp  HunterBeastmaster.cpp  HunterTrainer.cpp  PvpSystem.cpp  PvpSystemBackUp.cpp  Setup.cpp  Setup.h  Skillnpc.cpp  teleporter.cpp
src/scripts/EventScripts/: CMakeLists.txt  Event_Halloween.cpp  Event_WinterVeil.cpp  Setup.cpp  Setup.h
src/scripts/ExtraScripts/: CMakeLists.txt  Insta70.cpp  L70etc.cpp  Makefile.am  Portals.cpp  PvPToken.cpp  Setup.cpp  Setup.h  WeddingNpc.cpp
src/scripts/GossipScripts/: CMakeLists.txt  Gossip_Battlemaster.cpp  Gossip_Guard.cpp  Gossip_Innkeepers.cpp  Gossip_Moonglade.cpp  Gossip_Mulgore.cpp  Gossip_Shattrath.cpp  Gossip_Stormwind.cpp  Gossip_Tanaris.cpp  Gossip_Trainer.cpp  Setup.cpp  Setup.h
src/scripts/InstanceScripts/: Base.cpp  Base.h  CMakeLists.txt  Event_DarkPortal.cpp  GenericAI.cpp  Instance_Arcatraz.cpp  Instance_AuchenaiCrypts.cpp  Instance_BlackMorass.cpp  Instance_BlackrockDepths.cpp  Instance_BlackrockSpire.cpp  Instance_BloodFurnace.cpp  Instance_Botanica.cpp  Instance_Deadmines.cpp  Instance_DireMaul.cpp  Instance_HellfireRamparts.cpp  Instance_MagistersTerrace.cpp  Instance_ManaTombs.cpp  Instance_Maraudon.cpp  Instance_OldHillsbradFoothills.cpp  Instance_RagefireChasm.cpp  Instance_RazorfenDowns.cpp  Instance_ScarletMonastery.cpp  Instance_Scholomance.cpp  Instance_SethekkHalls.cpp  Instance_ShadowLabyrinth.cpp  Instance_ShadowfangKeep.cpp  Instance_TheMechanar.cpp  Instance_TheShatteredHalls.cpp  Instance_TheSlavePens.cpp  Instance_TheSteamvault.cpp  Instance_TheStockade.cpp  Instance_TheUnderbog.cpp  Instance_TheVioletHold.cpp  Instance_Uldaman.cpp  Instance_WailingCaverns.cpp  Instance_ZulFarrak.cpp  Makefile.am  Raid_BlackTemple.cpp  Raid_BlackwingLair.cpp  Raid_CoT_BattleOfMountHyjal.cpp  (+14 more)
src/scripts/LuaEngine/: CMakeLists.txt  LUAEngine.cpp  LUAEngine.h  LUAFunctions.h
src/scripts/MiscScripts/: CMakeLists.txt  Creatures.cpp  GameObjects.cpp  QuelDanasPortal.cpp  RandomScripts.cpp  Setup.cpp  Setup.h
src/scripts/QuestScripts/: Azuremyst_Isle.cpp  BladeEdge_Mountains.cpp  CMakeLists.txt  Druid.cpp  Eastern_Plaguelands.cpp  Hellfire_Peninsula.cpp  Isle_of_QuelDanas.cpp  Mage.cpp  Nagrand.cpp  Paladin.cpp  Setup.cpp  Setup.h  Shadowmoon.cpp  Silverpine_Forest.cpp  Terrokar_Forest.cpp  The_Barrens.cpp  Undercity.cpp  Ungoro.cpp  Zangarmarsh.cpp
src/scripts/ServerStatusPlugin/: CMakeLists.txt  ServerStatusPlugin.cpp
src/scripts/SpellHandlers/: CMakeLists.txt  HunterSpells.cpp  ItemSpells_1.cpp  MageSpells.cpp  MiscSpells.cpp  PaladinSpells.cpp  RogueSpells.cpp  Setup.cpp  Setup.h  ShamanSpells.cpp  WarlockSpells.cpp  WarriorSpells.cpp
src/scripts/WorldPvpScripts/: Base.cpp  Base.h  ZoneHellfirePeninsula.cpp  ZoneTerokkarForest.cpp  ZoneZangarmarsh.cpp
src/shared/: AscEmuConfig.h  AscEmu_getopt.cpp  AscEmu_getopt.h  AuthCodes.h  ByteBuffer.h  CMakeLists.txt  CThreads.cpp  CThreads.h  CallBack.cpp  CallBack.h  Common.h  CommonDefines.hpp  CommonHelpers.hpp  CommonTypes.hpp  CrashHandler.cpp  CrashHandler.h  DynLib.cpp  DynLib.hpp  Errors.h  FastQueue.h  FindFiles.cpp  FindFiles.hpp  FindFilesResult.hpp  LocationVector.h  Log.cpp  Log.h  LogonCommDefines.h  Makefile.am  MemoryLeaks.cpp  MemoryLeaks.h  MersenneTwister.cpp  MersenneTwister.h  NGLog.h  PreallocatedQueue.h  RealmPacket.h  Singleton.h  StackBuffer.h  StackWalker.cpp  Storage.h  Timer.h  (+6 more)
src/shared/Auth/: BigNumber.cpp  BigNumber.h  MD5.cpp  MD5.h  Sha1.cpp  Sha1.h  WowCrypt.cpp  WowCrypt.h
src/shared/Config/: Config.cpp  Config.h  ConfigEnv.h
src/shared/Database/: CreateInterface.cpp  DBC.cpp  DBCStores.cpp  DBCStores.h  Database.cpp  Database.h  DatabaseEnv.h  Field.h  MySQLDatabase.cpp  MySQLDatabase.h  PostgresDatabase.cpp  SQLiteDatabase.cpp  dbcfile.cpp  dbcfile.h
src/shared/Network/: CircularBuffer.cpp  CircularBuffer.h  ListenSocketWin32.h  NetworkIncludes.hpp  Socket.h  SocketDefines.h  SocketMgrLinux.h  SocketMgrWin32.cpp  SocketMgrWin32.h
src/shared/Threading/: AtomicBoolean.cpp  AtomicBoolean.h  AtomicCounter.cpp  AtomicCounter.h  AtomicFloat.cpp  AtomicFloat.h  AtomicULong.cpp  AtomicULong.h  Condition.h  ConditionVariable.cpp  ConditionVariable.h  Guard.h  LockedQueue.h  Mutex.cpp  Mutex.h  Queue.h  RWLock.h  ThreadPool.cpp  ThreadPool.h  ThreadStarter.h  Threading.h
src/world/: AIAHealSupport.cpp  AIAHealSupport.h  AIInterface.cpp  AIInterface.h  AddonMgr.cpp  AddonMgr.h  AlteracValley.cpp  AlteracValley.h  ArathiBasin.cpp  ArathiBasin.h  AreaTrigger.cpp  AreaTrigger.h  ArenaTeam.cpp  ArenaTeam.h  Arenas.cpp  Arenas.h  AuctionHouse.cpp  AuctionHouse.h  AuctionMgr.cpp  AuctionMgr.h  BaseConsole.h  BattlegroundCommands.cpp  BattlegroundHandler.cpp  BattlegroundMgr.cpp  BattlegroundMgr.h  CConsole.cpp  CConsole.h  CMakeLists.txt  CellHandler.h  Channel.cpp  Channel.h  ChannelHandler.cpp  ChannelMgr.h  CharacterHandler.cpp  Chat.cpp  Chat.h  ChatHandler.cpp  ClusterInterface.cpp  ClusterInterface.h  CollideInterface.cpp  (+171 more)
src/world/BufferPools/: BufferPools.cpp  BufferPools.h
src/world/Commands/: AccountCommands.cpp
src/world/DBC/: DBC.cpp  DBC.h  DBCGlobals.hpp  DBCLoader.cpp  DBCLoader.hpp  DBCRecord.cpp  DBCRecord.hpp  DBCSQL.cpp  DBCSQL.hpp  DBCStorage.hpp  (+3 more)
(+182 files in other folders)
